--- a/OMSUI/OrderManagerDesktopUI.csproj
+++ b/OMSUI/OrderManagerDesktopUI.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\OMSLibrary\OrderManagerLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
